--- a/storefront-api/StoreFront.API/appsettings.json
+++ b/storefront-api/StoreFront.API/appsettings.json
@@ -1,10 +1,5 @@
 {
   "ConnectionString": "Server=.; Database=StoreFront; User Id=StoreFrontUser; Password=password;",
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStringEF": "Server=.; Database=StoreFrontEF; User Id=StoreFrontUserEF; Password=password; TrustServerCertificate=True;",
+  "UsingEF": false
 }
