--- a/storefront-api/StoreFront.API/StoreFront.API.csproj
+++ b/storefront-api/StoreFront.API/StoreFront.API.csproj
@@ -8,13 +8,29 @@
 
     <ItemGroup>
       <ProjectReference Include="..\StoreFront.Common\StoreFront.Common.csproj" />
+      <ProjectReference Include="..\StoreFront.EF.Repository\StoreFront.EF.Repository.csproj" />
       <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.csproj" />
       <ProjectReference Include="..\StoreFront.Service\StoreFront.Service.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
