Updates to unit tests and misc files

--- a/storefront-api/StoreFront.API/StoreFront.API.csproj
+++ b/storefront-api/StoreFront.API/StoreFront.API.csproj
@@ -8,8 +8,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\StoreFront.Common\StoreFront.Common.csproj" />
-      <ProjectReference Include="..\StoreFront.EF.Repository\StoreFront.EF.Repository.csproj" />
-      <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.csproj" />
+      <ProjectReference Include="..\StoreFront.EF.Repository\StoreFront.Repository.EF.csproj" />
+      <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.ADO.csproj" />
       <ProjectReference Include="..\StoreFront.Service\StoreFront.Service.csproj" />
     </ItemGroup>
 
