--- a/storefront-api/StoreFront.Repository.Test/StoreFront.Repository.ADO.Test.csproj
+++ b/storefront-api/StoreFront.Repository.Test/StoreFront.Repository.ADO.Test.csproj
@@ -33,7 +33,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\StoreFront.Common\StoreFront.Common.csproj" />
-      <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.csproj" />
+      <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.ADO.csproj" />
       <ProjectReference Include="..\StoreFront.Service\StoreFront.Service.csproj" />
     </ItemGroup>
 
