--- a/storefront-api/StoreFront.Service.Test/StoreFront.Service.Test.csproj
+++ b/storefront-api/StoreFront.Service.Test/StoreFront.Service.Test.csproj
@@ -32,8 +32,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\StoreFront.Common\StoreFront.Common.csproj" />
-      <ProjectReference Include="..\StoreFront.Repository.Test\StoreFront.Repository.Test.csproj" />
-      <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.csproj" />
+      <ProjectReference Include="..\StoreFront.Repository.Test\StoreFront.Repository.ADO.Test.csproj" />
+      <ProjectReference Include="..\StoreFront.Repository\StoreFront.Repository.ADO.csproj" />
       <ProjectReference Include="..\StoreFront.Service\StoreFront.Service.csproj" />
     </ItemGroup>
 
