--- a/storefront-api/StoreFront.API/StoreFront.API.csproj
+++ b/storefront-api/StoreFront.API/StoreFront.API.csproj
@@ -31,6 +31,9 @@
       <Content Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Update="nLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
